# LearnOpenGL

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  compile_commands.json
include/: shader_s.hpp
include/glad/: glad.h
shaders/: shader.vs
src/: glad.c  main.cpp
